# Kora

./: .env  README.md  check.sh  docker-compose.yml
backend/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  manage.py  mypy.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/application/land/: __init__.py  get.py  get_spatial_features.py
backend/app/application/parcel/: create.py
backend/app/domain/land/: __init__.py  entity.py  repository.py
backend/app/infrastructure/db/: models.py  session.py
backend/app/infrastructure/db/repositories/: land_repo.py  parcel_repo.py
backend/app/interfaces/api/routes/: land.py  parcel.py
backend/app/shared/: config.py
backend/crates/kora-api/: Cargo.toml
backend/crates/kora-api/src/: analyze_variance.rs  config.rs  db.rs  lib.rs  main.rs  router.rs  state.rs
backend/crates/kora-api/src/adapters/: finance_economic_provider.rs  in_memory_repositories.rs  incidence_in_memory.rs  mod.rs  payroll_in_memory.rs  revenue_in_memory.rs  soil_in_memory.rs  worker_in_memory.rs
backend/crates/kora-api/src/api/: areas.rs  cycles.rs  fields.rs  health.rs  home.rs  incidence.rs  mod.rs  operation.rs  overview.rs  payroll.rs  planning.rs  revenue.rs  soil.rs
backend/crates/kora-api/src/common/: error.rs
backend/crates/kora-api/src/features/: mod.rs
backend/crates/kora-api/src/use_cases/: add_planned_activity.rs  create_budget.rs  get_area_dashboard.rs  get_cycle_timeline.rs  get_cycle_variance.rs  get_field_history.rs  incidence.rs  (+11 more)
backend/crates/kora-domain/: Cargo.toml
backend/crates/kora-domain/src/: lib.rs
backend/crates/kora-kernel/: Cargo.toml
backend/crates/kora-kernel/src/: area_unit.rs  error.rs  ids.rs  period.rs  polygon.rs
backend/docs/: PORTS_ADAPTERS_STRATEGY.md  REFACTOR_IDS_BY_BOUNDED_CONTEXT.md  feature_steps.dot  info.md  repo.dot
backend/migrations/: 20240716000001_create_employees.sql  20240716000002_create_work_logs.sql
backend/src/: analyze_variance.rs  api.rs  main.py  main.rs
backend/src/adapters/: finance_economic_provider.rs  in_memory_repositories.rs  mod.rs
backend/src/agriculture/: area.rs  crop.rs  cycle.rs  drift.rs  error.rs  farm.rs  mod.rs  planning.rs  planning_service.rs  structure.md
backend/src/agriculture/application/: mod.rs
backend/src/agriculture/domain/: activity.rs  analysis.rs  crop.rs  cycle.rs  error.rs  farm.rs  ids.rs  mod.rs  planning.rs
backend/src/api/: mod.rs  operation.rs
backend/src/application/: error.rs
backend/src/application/parcel/: create.py
backend/src/application/use_cases/: create_parcel.py
backend/src/domain/land/: models.py  repositories.py
backend/src/domain/parcel/: entity.py  repository.py
backend/src/domain/shared/: value_objects.py
backend/src/finance/: budget.rs  error.rs  expense.rs  mod.rs
backend/src/finance/application/: mod.rs
backend/src/finance/domain/: budget.rs  expense.rs  ids.rs  mod.rs
backend/src/finance/infrastructure/: mod.rs
backend/src/integration/: mod.rs
backend/src/labor/: mod.rs
backend/src/labor/domain/: ids.rs  mod.rs  work_record.rs  worker.rs
backend/src/ports/: cycle_repository.rs  economic_data_provider.rs  mod.rs  schedule_repository.rs
backend/src/shared_kernel/: area_unit.rs  ids.rs  mod.rs  money.rs  polygon.rs
backend/src/shared_kernel/measurement/: error.rs
backend/src/shared_kernel/time/: mod.rs
backend/src/tests/: integration_test.rs  mod.rs
(+320 files in other folders)
