[package]
name = "kora-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kora-kernel = { workspace = true }
kora-domain = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
geo-types = { workspace = true }
geo = { workspace = true }
rust_decimal = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
