[package]
name = "kora-domain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
uuid = { workspace = true }
geo-types = { workspace = true }
geo = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true, features = ["derive"] }
